[package]
name = "demoengine"
version = "0.1.0"
authors = ["Denis Declara <decden@users.noreply.github.com>"]
license = "MIT"

[build-dependencies]
lalrpop = "0.17"

[dependencies]
glutin = "0.21"
gl = "0.12"
glm = "0.2.3"
time = "0.1"
lalrpop-util = "0.17"
regex = "1.1"
notify = "4.0"
rust-rocket = "0.3"
libc = "0.2"
bytes = "0.4"
wavefront_obj = "6.0.0"
image = "0.22.1"
openexr = "0.7.0"
half = "1.3.0"